Fix to input spacing from title

--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -13,6 +13,7 @@
 .heroName {
   text-align: center;
   color:black;
+  margin-top: .4em;
 }
 
 .login {
